--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "version": "1.0.0",
     "description": "Agente IA da NEO.FLOWOFF",
     "main": "server.js",
-    "scripts": {
-      "dev": "node server.js",
-      "start": "node server.js"
-    },
+  "scripts": {
+    "dev": "node server.js",
+    "start": "node server.js",
+    "build": "echo 'Build completed'"
+  },
     "dependencies": {
       "express": "^4.18.2",
       "cors": "^2.8.5",
