🔗 Add webhook integration for Hugging Face
- Added webhooks configuration in neo-web-agent.whisky.yaml
- Created /api/huggingfaceProxy endpoint for webhook processing
- Integrated with existing agent logic for consistent responses
- Added session management and lead capture for webhook calls

--- a/agents/neo-web-agent.whisky.yaml
+++ b/agents/neo-web-agent.whisky.yaml
@@ -38,3 +38,12 @@ agent:
     type: local
     format: json
     path: "./data/leads.json"
+
+  webhooks:
+    onInput:
+      url: "https://agent-neo-flowoff.vercel.app/api/huggingfaceProxy"
+      method: POST
+      body:
+        input: "${input}"
+      responseMapping:
+        text: "${output}"
