🎯 Add desktop detection and redirect page
- Created desktop.html with provocative design and mobile-first messaging
- Added desktop detection logic in embed.html (width > 768px or non-mobile user agent)
- Implemented auto-redirect with countdown timer (10s) and cancel option
- Added QR code generation for mobile access
- Enhanced visual design with particles animation and glassmorphism effects
- Added mobile preview mockup showing how it should look
- Updated server.js and vercel.json to serve desktop route
- Transformed limitation into engaging first impression with NEO.FLOWOFF branding

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
       "dest": "/server.js"
     },
     {
+      "src": "/desktop",
+      "dest": "/server.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "/public/$1"
     }
