🎯 Focus on WhatsApp only - Production ready
- Removed Calendly integration completely
- Updated all actions to redirect to WhatsApp only
- Personalized WhatsApp messages by profile (empresário/freelancer/agência)
- Simplified configuration removing unused integrations
- Updated env.example and README for production focus
- Ready for NODE_ENV=production deployment
- Removed .env file (use environment variables instead)

--- a/agents/neo-web-agent.whisky.yaml
+++ b/agents/neo-web-agent.whisky.yaml
@@ -27,12 +27,9 @@ agent:
   output:
     type: structured
     actions:
-      - name: "Ir para WhatsApp"
+      - name: "Falar no WhatsApp"
         type: link
-        url: "https://wa.me/5562983231110?text=Quero%20falar%20com%20alguém%20da%20NEO"
-      - name: "Agendar uma Call"
-        type: link
-        url: "https://calendly.com/SEULINK"
+        url: "https://wa.me/5562983231110?text=Olá!%20Vim%20pelo%20site%20NEO.FLOWOFF%20e%20quero%20saber%20mais%20sobre%20os%20serviços."
 
   storage:
     type: local
