--- a/env.example
+++ b/env.example
@@ -39,13 +39,9 @@ PIPEDRIVE_TOKEN=seu_pipedrive_token
 # Mailchimp API Key
 MAILCHIMP_API_KEY=seu_mailchimp_key
 
-# 📱 WHATSAPP (opcional)
-# Número do WhatsApp para redirecionamento
+# 📱 WHATSAPP
+# Número do WhatsApp para redirecionamento (obrigatório)
 WHATSAPP_NUMBER=5562983231110
-
-# 📅 CALENDLY (opcional)
-# Link do Calendly para agendamentos
-CALENDLY_LINK=https://calendly.com/seu_usuario
 
 # 🗄️ BANCO DE DADOS (opcional)
 # Se quiser usar um banco real em vez de JSON
