🔧 Fix Vercel configuration - Remove deprecated builds
- Replaced deprecated 'builds' configuration with modern 'functions'
- Updated to use 'rewrites' instead of 'routes'
- Specified Node.js 18.x runtime
- This resolves the Vercel warning about unused build settings
- Modern Vercel configuration for better performance

--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,17 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
+  "functions": {
+    "server.js": {
+      "runtime": "nodejs18.x"
     }
-  ],
-  "routes": [
+  },
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/server.js"
+      "source": "/api/(.*)",
+      "destination": "/server.js"
     },
     {
-      "src": "/embed",
-      "dest": "/server.js"
-    },
-    {
-      "src": "/public/(.*)",
-      "dest": "/public/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
+      "source": "/embed",
+      "destination": "/server.js"
     }
   ]
 }
