--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
 {
   "functions": {
-    "api/server.js": {
+    "pages/api/server.js": {
       "runtime": "@vercel/node@3.0.7"
     }
   },
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/api/server.js"
+      "destination": "/pages/api/server.js"
     },
     {
       "source": "/embed",
-      "destination": "/api/server.js"
+      "destination": "/pages/api/server.js"
     }
   ]
 }
