--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
     "name": "agent-neo-flowoff",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Agente IA da NEO.FLOWOFF",
     "main": "server.js",
   "scripts": {
-    "dev": "node server.js",
-    "start": "node server.js",
-    "build": "echo 'Build completed'"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "local": "node server.js"
   },
     "dependencies": {
-      "express": "^4.18.2",
-      "cors": "^2.8.5",
-      "body-parser": "^1.20.2",
-      "uuid": "^9.0.0"
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "next": "^15.5.3",
+        "uuid": "^9.0.0"
     }
-  }
-  
+}
