🔧 Force Next.js framework recognition
- Updated vercel.json to explicitly specify Next.js framework
- Added buildCommand and outputDirectory
- This should force Vercel to recognize the project correctly

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/pages/api/index.js"
-    },
-    {
-      "source": "/embed",
-      "destination": "/pages/api/index.js"
-    }
-  ]
+  "framework": "nextjs",
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next"
 }
