--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
     "version": "1.0.1",
     "description": "Agente IA da NEO.FLOWOFF",
     "main": "server.js",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "local": "node server.js"
-  },
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "local": "node server.js"
+    },
     "dependencies": {
+        "axios": "^1.12.2",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "express": "^4.18.2",
